; ModuleID = '/home/carl/AnghaBench/vlc/test/src/input/extr_stream.c_stream_peek.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/input/extr_stream.c_stream_peek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reader = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.reader*, i32**, i64)* @stream_peek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stream_peek(%struct.reader* %0, i32** %1, i64 %2) #0 {
  %4 = alloca %struct.reader*, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i64, align 8
  store %struct.reader* %0, %struct.reader** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.reader*, %struct.reader** %4, align 8
  %8 = getelementptr inbounds %struct.reader, %struct.reader* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32**, i32*** %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @vlc_stream_Peek(i32 %10, i32** %11, i64 %12)
  ret i32 %13
}

declare dso_local i32 @vlc_stream_Peek(i32, i32**, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
